[package]
name = "embedded-graphics-framebuf"
version = "0.0.2"
edition = "2021"
authors = ["Bernard Kobos <bkobos@gmail.com>"]
license = "MIT"
description = "Frame buffer helper for embedded-graphics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7"
