[package]
name = "embedded-graphics-framebuf"
version = "0.2.0"
edition = "2021"
authors = [
  "Bernard Kobos <bkobos@gmail.com>",
  "Jounathaen <jounathaen at mail dot de>",
]
license = "MIT"
description = "Frame buffer helper for embedded-graphics"

[dependencies]
embedded-dma = "0.2.0"
embedded-graphics = "0.8.0"
